# sample-rust-flake

./: README.md  flake.nix
nixos/: configuration.nix  hardware-configuration.nix
project/axum-eavs/: flake.nix  result
project/axum-eavs/src/: main.rs
project/axum-project/: Cargo.toml  flake.nix
